[gd_scene load_steps=4 format=2]

[ext_resource path="res://Maze.gd" type="Script" id=1]
[ext_resource path="res://MazeTiles.tres" type="TileSet" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="Maze" type="Node2D"]
script = ExtResource( 1 )

[node name="canvas_modulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="bg" type="ColorRect" parent="."]
margin_right = 1202.0
margin_bottom = 695.0
color = Color( 0.0392157, 0.0666667, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maze_map" type="TileMap" parent="."]
light_mask = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
format = 1

[node name="slow_gen_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="cur_cell_indicator" type="ColorRect" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.0705882, 0.788235, 0.117647, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 17, 16 )

[connection signal="timeout" from="slow_gen_timer" to="." method="_on_slow_gen_timer_timeout"]
